# bb8-stack

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/: __init__.py
apps/agent/: README.md  requirements.txt
apps/agent/bb8_agent/: __init__.py  config.py  graph.py  main.py  safety_policy.py  state.py
apps/agent/bb8_agent/mcp_client/: __init__.py  client.py
apps/agent/bb8_agent/memory/: __init__.py  compactor.py  store.py
apps/agent/bb8_agent/model_providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
apps/agent/tests/: test_safety_policy.py
apps/mcp_server/: README.md  __init__.py  requirements.txt
apps/mcp_server/bb8_mcp/: __init__.py  config.py  server.py
apps/mcp_server/bb8_mcp/ros_bridge/: __init__.py  client.py
apps/mcp_server/bb8_mcp/safety/: __init__.py  limits.py  validators.py
bb8-soul/: README.md  behavior_principles.md  constitution.md  hierarchy_of_needs.md
bb8-soul/proposed_changes/: README.md
docs/: README.md  architecture.md  hardware-inventory.md  memory-model.md  milestone-1-validation.md  milestone-2-validation.md  milestones.md  safety.md  simulation.md  skill-design.md
docs/decisions/: 0001-monorepo-with-soul-subdir.md  0002-offboard-agent-onboard-runtime.md  0003-ros2-gazebo-first.md  0004-langgraph-with-bounded-react-node.md  0006-ros-gazebo-container-base.md  0007-stage-milestone-2-as-visible-physics-body.md
evals/: README.md
evals/scenarios/: sim_roll_forward_safe.yaml
evals/scorecards/: safety.yaml
firmware/: README.md
firmware/flashforge_motor_probe/: README.md
memory/: README.md  schema.sql
ros_ws/: README.md
ros_ws/src/bb8_bringup/: CMakeLists.txt  package.xml
ros_ws/src/bb8_bringup/config/: README.md
ros_ws/src/bb8_bringup/launch/: sim.launch.py
ros_ws/src/bb8_control/: CMakeLists.txt  package.xml
ros_ws/src/bb8_control/config/: controllers.yaml
ros_ws/src/bb8_control/src/: rolling_sphere_controller.cpp
ros_ws/src/bb8_description/: CMakeLists.txt  package.xml
ros_ws/src/bb8_description/launch/: README.md  description.launch.py
ros_ws/src/bb8_description/meshes/: README.md
ros_ws/src/bb8_description/urdf/: bb8.urdf.xacro
ros_ws/src/bb8_navigation/: CMakeLists.txt  package.xml
ros_ws/src/bb8_navigation/config/: README.md
ros_ws/src/bb8_navigation/launch/: README.md
ros_ws/src/bb8_safety/: CMakeLists.txt  package.xml
ros_ws/src/bb8_safety/src/: watchdog_node.cpp
ros_ws/src/bb8_sensors/: CMakeLists.txt  package.xml
ros_ws/src/bb8_sensors/src/: bb8_sensor_state.cpp
ros_ws/src/bb8_skills_ros/: CMakeLists.txt  package.xml
ros_ws/src/bb8_skills_ros/src/: roll_forward_safe_action.cpp
scripts/: dev_agent.sh  dev_mcp.sh  sim_smoke_test.sh  test_all.sh
sim/: README.md
sim/docker/: Dockerfile.ros-jazzy-gazebo  entrypoint.sh
sim/models/bb8_rolling_sphere/: README.md  model.config  model.sdf
sim/scenarios/: roll_forward_safe.yaml
sim/worlds/: bb8_room.sdf  empty_room.sdf
skills/: README.md
skills/catalog/: roll_forward_safe.skill.yaml  stop_now.skill.yaml
skills/schemas/: skill.schema.json
