<?xml version="1.0"?>
<package format="3">
  <name>bb8_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for BB-8 sim and runtime.</description>
  <maintainer email="todo@example.com">TennisGazelle</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
