<?xml version="1.0"?>
<package format="3">
  <name>bb8_description</name>
  <version>0.0.1</version>
  <description>Robot description for BB-8 rolling sphere simulation.</description>
  <maintainer email="todo@example.com">TennisGazelle</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
