<?xml version="1.0"?>
<package format="3">
  <name>bb8_safety</name>
  <version>0.0.1</version>
  <description>Safety watchdogs, motion limits, and e-stop logic.</description>
  <maintainer email="todo@example.com">TennisGazelle</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
